# requests_error_decorator

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/requests_error_handling_package/: example.py  requests_error_decorator.py
tests/: test.py
