[metadata]
name = requests-error-decorator-snirsh
version = 0.0.2
author = Snir Sharristh
author_email = s.sharristh@gmail.com
description = A small package that handles requests errors and logs them
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/snirsh/requests_error_decorator
project_urls =
    Bug Tracker = https://github.com/snirsh/requests_error_decorator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
